# UCR_College_Projects

./: .gitmodules
CS010B/Lab_10.1/: IntList.cpp  IntList.h  main.cpp
CS010B/Lab_2.1/: a.out  main.cpp
CS010B/Lab_2.2/: a.out  alpha.txt  main.cpp
CS010B/Lab_2.3/: a.out  main.cpp
CS010B/Lab_3.1/: a.out  main.cpp
CS010B/Lab_4.1/: Distance.cpp  Distance.h  a.out  main.cpp
CS010B/Lab_5.1/: a.out  main.cpp
CS010B/Lab_6.1/: IntVector.cpp  IntVector.h  a.out  main.cpp
CS010B/Lab_7.1/: IntList.cpp  IntList.h  a.out
CS010B/Lab_8.1/: Character.cpp  Elf.cpp  Elf.h  Warrior.cpp  Warrior.h  Wizard.cpp  Wizard.h  a.out
CS010B/Lab_9.1/: a.out  minFunc.cpp
CS010B/Lab_9.2/: IntList.cpp  a.out
CS010B/Programming_Assignment_1/: a.out  main.cpp
CS010B/Programming_Assignment_2/: a.out  main.cpp
CS010B/Programming_Assignment_3/: Card.cpp  Card.h  Deck.cpp  Deck.h  a.out  main.cpp
CS010B/Programming_Assignment_4/: IntVector.cpp  IntVector.h  a.out  main.cpp
CS010B/Programming_Assignment_5/: IntList.cpp  IntList.h  a.out  main.cpp
CS010B/Programming_Assignment_6/: IntList.cpp  IntList.h  SortedSet.cpp  SortedSet.h  a.out  main.cpp
CS010C/Lab1/: Playlist.h  (+4 more)
CS111/: Decrypt.txt  Hw2.cpp  Plaintext.cpp  a.out
final-project-cs100/: CMakeLists.txt  README.md
final-project-cs100/TestFiles/: CMakeLists.txt  TestAccount.cpp  TestAccountDatabase.cpp  TestBook.cpp  TestLibary.cpp  TestLibrarian.cpp  TestLibrarianMenu.cpp  TestLibrarySort.cpp  TestLogin.cpp  TestReccomendations.cpp  TestReview.cpp  TestSearchAccount.cpp  TestSignUp.cpp  TestUser.cpp  TestUserMenu.cpp
(+92 files in other folders)
